最初のコミット

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
 <script>
     const agents = {
-        "デュエリスト": { "ジェット": "images/ジェット.avif", "レイズ": "images/レイズ.avif", "フェニックス": "images/フェニックス.avif", "レイナ": "images/レイナ.avif", "ヨル": "images/ヨル.avif", "ネオン": "images/ネオン.avif", "アイソ": "images/アイソ.avif" },
-        "センチネル": { "セージ": "images/セージ.avif", "サイファー": "images/サイファー.avif", "キルジョイ": "images/キルジョイ.avif", "チェンバー": "images/チェンバー.avif", "デッドロック": "images/デッドロック.avif", "ヴァイス": "images/ヴァイス.avif" },
-        "イニシエーター": { "ブリーチ": "images/ブリーチ.avif", "ソーヴァ": "images/ソーヴァ.avif", "スカイ": "images/スカイ.avif", "KAY/O": "images/KAYO.avif", "フェイド": "images/フェイド.avif", "ゲッコー": "images/ゲッコー.avif" },
-        "コントローラー": { "ヴァイパー": "images/ヴァイパー.avif", "アストラ": "images/アストラ.avif", "ハーバー": "images/ハーバー.avif", "クローヴ": "images/クローヴ.avif" }
+        "デュエリスト": { "ジェット": "images/jett.avif", "レイズ": "images/raze.avif", "フェニックス": "images/phoenix.avif", "レイナ": "images/reyna.avif", "ヨル": "images/yoru.avif", "ネオン": "images/neon.avif", "アイソ": "images/iso.avif" },
+        "センチネル": { "セージ": "images/sage.avif", "サイファー": "images/cypher.avif", "キルジョイ": "images/killjoy.avif", "チェンバー": "images/chamber.avif", "デッドロック": "images/deadlock.avif", "ヴァイス": "images/vyse.avif" },
+        "イニシエーター": { "ブリーチ": "images/breach.avif", "ソーヴァ": "images/sova.avif", "スカイ": "images/sky.avif", "KAY/O": "images/kayo.avif", "フェイド": "images/fade.avif", "ゲッコー": "images/gekko.avif" },
+        "コントローラー": { "ヴァイパー": "images/viper.avif", "アストラ": "images/astra.avif", "ハーバー": "images/harbor.avif", "クローヴ": "images/clove.avif" }
     };
 
     function getRandomAgent(role, exclude=[]) {
